test/libyul/yulSyntaxTests/period_in_identifier_spaced_1.yul
{ let x. y:u256 }
// ----
// ParserError 6913: (10-11): Call or assignment expected.
